@@ -136,7 +136,7 @@ public class CmsCAService extends ExtendedCAService implements java.io.Serializa
 		setSubjectDN(info.getSubjectDN());
 		setSubjectAltName(info.getSubjectAltName());                       
 		setStatus(serviceinfo.getStatus());
-		data.put(VERSION, new Float(LATEST_VERSION));
+		data.put(VERSION, Float.valueOf(LATEST_VERSION));
 	}
 
 	public CmsCAService(final HashMap<Object, Object> data) throws IllegalArgumentException {
@@ -366,7 +366,7 @@ public class CmsCAService extends ExtendedCAService implements java.io.Serializa
 		if (Float.compare(LATEST_VERSION, getVersion()) != 0) {
 			// New version of the class, upgrade
 			data.put(ExtendedCAServiceInfo.IMPLEMENTATIONCLASS, this.getClass().getName());	// For integration with CESeCore
-			data.put(VERSION, new Float(LATEST_VERSION));
+			data.put(VERSION, Float.valueOf(LATEST_VERSION));
 		}
 	}
 
